--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 
                 <form class="contact-form-placeholder">action="https://formspree.io/f/xwxpyvoep" method="POST">
                     <p>????? ???????? ???????? ????? Contact Form-?? ??? ???? (????????? ????? ??)?</p>
-                    <input type="text" placeholder="Your Name">
-                    <input type="email" placeholder="Your Email">
-                    <input type="text" placeholder="Your Website URL (Optional)">
-                    <textarea placeholder="Your Message"></textarea>
+                    <input type="text" name="name" placeholder="Your Name">
+                    <input type="email" name="_replyto" placeholder="Your Email">
+                    <input type="text" name="website" placeholder="Your Website URL (Optional)">
+                    <textarea name="message" placeholder="Your Message"></textarea>
                     <button type="submit" class="primary-btn">Send Message</button>
                 </form>
             </div>
@@ -170,6 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
