--- a/index.html
+++ b/index.html
@@ -221,68 +221,109 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       min-height: 120px;
     }
 
+   <div id="mc_embed_shell">
+
+  <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" 
+        rel="stylesheet" type="text/css">
+
+  <style type="text/css">
+
+    #mc_embed_signup {
+      background: rgba(255, 255, 255, 0.10);
+      border-radius: 18px;
+      border: 1px solid rgba(255, 255, 255, 0.20);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      padding: 24px 22px;
+      max-width: 520px;
+      width: 100%;
+      margin: 0 auto;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.4);
+      color: #fff;
+    }
+
+    #mc_embed_signup h2 {
+      font-size: 22px;
+      margin-bottom: 14px;
+      font-weight: 700;
+      text-align: left;
+      color: #fff;
+    }
+
+    #mc_embed_signup .mc-field-group {
+      margin-bottom: 14px;
+    }
+
+    #mc_embed_signup label {
+      display: block;
+      margin-bottom: 4px;
+      font-size: 13px;
+      font-weight: 600;
+      color: #fff;
+    }
+
+    #mc_embed_signup input[type="text"],
+    #mc_embed_signup input[type="email"],
+    #mc_embed_signup textarea {
+      width: 100%;
+      padding: 10px 12px;
+      border-radius: 10px;
+      border: 1px solid rgba(255,255,255,0.35);
+      background: rgba(0,0,0,0.25);
+      color: #fff;
+      outline: none;
+      transition: 0.25s ease;
+    }
+
+    #mc_embed_signup input::placeholder,
+    #mc_embed_signup textarea::placeholder {
+      color: rgba(230,230,230,0.7);
+    }
+
+    #mc_embed_signup input:focus,
+    #mc_embed_signup textarea:focus {
+      border-color: #fff;
+      background: rgba(0,0,0,0.38);
+      box-shadow: 0 0 0 1px rgba(255,255,255,0.35);
+    }
+
+    #mc_embed_signup textarea {
+      min-height: 120px;
+      resize: vertical;
+    }
+
     #mc_embed_signup .button {
-  display: block;
-  width: 100%;
-  padding: 11px 24px;
-  border: none;
-  border-radius: 999px;
-  background: linear-gradient(135deg, #00e5ff, #7c4dff);
-  color: #ffffff;
-  cursor: pointer;
-  font-weight: 600;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  font-size: 12px;
-  text-align: center;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.35);
-  margin-top: 16px;
-  transition: transform 0.15s ease, box-shadow 0.15s ease, opacity 0.15s ease;
-}
-
-#mc_embed_signup .button:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 14px 30px rgba(0, 0, 0, 0.45);
-  opacity: 0.95;
-}
-
-#mc_embed_signup .button:active {
-  transform: translateY(0);
-  box-shadow: 0 8px 18px rgba(0, 0, 0, 0.35);
-}
-
-    #mc_embed_signup .asterisk {
-      color: #ffb74d;
+      display: block !important;
+      width: 100% !important;
+      padding: 14px 0 !important;
+      border-radius: 30px !important;
+      border: none !important;
+      background: linear-gradient(90deg, #00e5ff, #7c4dff) !important;
+      color: #fff !important;
+      text-align: center !important;
+      font-weight: 700 !important;
+      font-size: 14px !important;
+      letter-spacing: 1px !important;
+      text-transform: uppercase !important;
+      cursor: pointer;
+      margin-top: 18px !important;
+      box-shadow: 0 8px 22px rgba(0,0,0,0.35) !important;
+      transition: 0.2s ease !important;
     }
 
-    #mc_embed_signup .clear.foot {
-      margin-top: 8px;
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 10px;
+    #mc_embed_signup .button:hover {
+      opacity: 0.92 !important;
+      transform: translateY(-2px) !important;
     }
 
-    #mce-responses {
-      margin-top: 6px;
-      font-size: 12px;
+    #mc_embed_signup .button:active {
+      transform: translateY(0px) !important;
     }
 
-    #mce-error-response {
-      color: #ff8a80;
+    input[type="submit"] {
+      box-shadow: none !important;
     }
 
-    #mce-success-response {
-      color: #b9f6ca;
-    }
-
-    /* Small screens */
-    @media (max-width: 600px) {
-      #mc_embed_signup {
-        padding: 18px 14px;
-        max-width: 100%;
-      }
-    }
   </style>
 
   <div id="mc_embed_signup">
@@ -294,68 +335,46 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           target="_blank"
           novalidate>
 
-      <div id="mc_embed_signup_scroll">
-        <h2>Contact Form</h2>
+      <h2>Contact Form</h2>
 
-        <!-- Name -->
-        <div class="mc-field-group">
-          <label for="mce-FNAME">Your Name</label>
-          <input type="text" name="FNAME" id="mce-FNAME" required>
-        </div>
-
-        <!-- Email -->
-        <div class="mc-field-group">
-          <label for="mce-EMAIL">
-            Email Address <span class="asterisk">*</span>
-          </label>
-          <input type="email"
-                 name="EMAIL"
-                 class="required email"
-                 id="mce-EMAIL"
-                 required>
-        </div>
-
-        <!-- Website -->
-        <div class="mc-field-group">
-          <label for="mce-WEBSITE">Your Website (Optional)</label>
-          <input type="text" name="WEBSITE" id="mce-WEBSITE">
-        </div>
-
-        <!-- Message -->
-        <div class="mc-field-group">
-          <label for="mce-MESSAGE">Message</label>
-          <textarea name="MESSAGE" id="mce-MESSAGE" required></textarea>
-        </div>
-
-        <!-- Mailchimp responses -->
-        <div id="mce-responses" class="clear foot">
-          <div class="response" id="mce-error-response" style="display:none"></div>
-          <div class="response" id="mce-success-response" style="display:none"></div>
-        </div>
-
-        <!-- Bot field -->
-        <div aria-hidden="true" style="position:absolute; left:-5000px;">
-          <input type="text"
-                 name="b_1dddeca728e2697ba117dcb7d_882cbe0800"
-                 tabindex="-1"
-                 value="">
-        </div>
-
-        <!-- Submit -->
-        <div class="optionalParent">
-          <div class="clear foot">
-            <input type="submit"
-                   name="subscribe"
-                   id="mc-embedded-subscribe"
-                   class="button"
-                   value="Send Message">
-          </div>
-        </div>
-
+      <div class="mc-field-group">
+        <label for="mce-FNAME">Your Name</label>
+        <input type="text" name="FNAME" id="mce-FNAME" required>
       </div>
+
+      <div class="mc-field-group">
+        <label for="mce-EMAIL">Email Address *</label>
+        <input type="email" name="EMAIL" id="mce-EMAIL" required>
+      </div>
+
+      <div class="mc-field-group">
+        <label for="mce-WEBSITE">Your Website (Optional)</label>
+        <input type="text" name="WEBSITE" id="mce-WEBSITE">
+      </div>
+
+      <div class="mc-field-group">
+        <label for="mce-MESSAGE">Message</label>
+        <textarea name="MESSAGE" id="mce-MESSAGE" required></textarea>
+      </div>
+
+      <div style="position:absolute; left:-5000px;" aria-hidden="true">
+        <input type="text" name="b_1dddeca728e2697ba117dcb7d_882cbe0800" tabindex="-1" value="">
+      </div>
+
+      <input type="submit" name="subscribe" class="button" value="Send Message">
+
     </form>
   </div>
+
 </div>
+
+
+
+
+
+
+You said:
+
 
 
                    <input type="hidden" name="_gotcha" style="display:none !important">
@@ -379,6 +398,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
