--- a/index.html
+++ b/index.html
@@ -66,16 +66,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
     </header>
 
-    <section id="hero" class="hero-section">
-        <div class="container">
-            <p class="title-text">I am an SEO Specialist in Local SEO, Google Ranking & Business Optimization</p>
-            <div class="contact-quick">
-                <p><i class="fas fa-map-marker-alt"></i> Uttara, Dhaka, Bangladesh</p>
-                <p><i class="fas fa-envelope"></i> mahmodulhasan9513@gmail.com</p>
-            </div>
-            <a href="#services" class="primary-btn">Explore My Services <i class="fas fa-arrow-right"></i></a>
+  <section class="hero-section">
+    <div class="hero-container">
+
+        <!-- Profile Image -->
+        <div class="hero-image">
+            <img src="/mnt/data/3b3a1743-fae0-42a6-8d4d-a5c6a80941a4.jpeg" 
+                 alt="Mahmodul Hasan - SEO Specialist">
         </div>
-    </section>
+
+        <!-- Hero Text -->
+        <div class="hero-text">
+            <h1>I am an SEO Specialist in Local SEO, Google Ranking & Business Optimization</h1>
+
+            <p class="location">📍 Uttara, Dhaka, Bangladesh</p>
+            <p class="email">📧 mahmodulhasan9513@gmail.com</p>
+
+            <a class="hero-btn" href="#services">Explore My Services →</a>
+        </div>
+
+    </div>
+</section>
 
     <section id="about" class="section-padding">
         <div class="container">
@@ -278,6 +289,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
