--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <div class="hero-container">
     <div class="hero-image">
-      <img src="https://i.imgur.com/zBOspfX.jpeg" alt="Mahmodul Hasan - SEO Specialist Profile Picture"> 
+      <img src="https://i.imgur.com/tX56lBl.jpeg" alt="Mahmodul Hasan - SEO Specialist Profile Picture"> 
     </div>
     <div class="hero-text">
       <h1>I am an SEO Specialist in Local SEO, Google Ranking & Business Optimization</h1>
@@ -281,6 +281,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
