--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
    <header>
         <div class="container">
-            <h1 class="name">Mahmodul Hasan</h1>
+            <h3 class="name">Mahmodul Hasan</h3>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -73,7 +73,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <img src="https://i.imgur.com/tX56lBl.jpeg" alt="Mahmodul Hasan - SEO Specialist Profile Picture"> 
     </div>
     <div class="hero-text">
-      <h1>I am an SEO Specialist in Local SEO, Google Ranking & Business Optimization</h1>
+      <h1>I Mahmodul Hasan: SEO Specialist, AEO Expert & Technical SEO Services in Dhaka</h1>
       <p class="location">📍 Uttara, Dhaka, Bangladesh</p>
       <p class="email">📧 mahmodulhasan9513@gmail.com</p>
       <a class="hero-btn" href="#services">Explore My Services →</a>
@@ -289,6 +289,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
