--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mahmodul Hasan: SEO Specialist, AEO Expert & Technical SEO Services in Bangladesh</title>
-  <meta name="description" content="Bangladesh's SEO & AEO Expert (E-E-A-T Focused). Delivers data-driven Technical SEO, GEO & Semantic strategies for top organic growth in Bangladesh. Hire me.">
-   <link rel="https://mahmodulhasan9513-seo.github.io/seo-specialist-Bangladesh/">
+    <title>Mahmodul Hasan: SEO, AEO & Technical Expert in Bangladesh</title>
+  <meta name="description" content="Bangladesh's SEO & AEO Expert (E-E-A-T Focused). Delivers data-driven Technical SEO, GEO & Semantic strategies for top organic growth in Bangladesh. Hire me/">
+   <link rel="canonical" href="https://mahmodulhasan9513-seo.github.io/seo-specialist-Bangladesh/">
    <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -289,6 +289,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
