--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <section id="services" class="section-padding accent-bg">
         <div class="container">
+           <section id="core-services">
             <h2>My Core SEO Services</h2>
             <div class="service-grid">
                 <div class="service-item">
@@ -284,6 +285,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
