--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="service-grid">
                 <div class="service-item">
                     <i class="fas fa-search"></i>
+                   <div class="service-box" id="on-page-optimization">
                     <h3>On-Page SEO</h3>
                 </div>
                 <div class="service-item">
@@ -285,6 +286,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
