--- a/index.html
+++ b/index.html
@@ -120,18 +120,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="service-item">
                     <i class="fas fa-cogs"></i>
+                   <div class="service-box" id="technical-seo">
                     <h3>Technical SEO</h3>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-map-marker-alt"></i>
+                   <div class="service-box" id="local-seo">
                     <h3>Local SEO / Geo Local SEO</h3>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-key"></i>
+                   <div class="service-box" id="keyword-research">
                     <h3>Keyword Research</h3>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-chart-line"></i>
+                   <div class="service-box" id="content-optimization">
                     <h3>Content Optimization</h3>
                 </div>
                 <div class="service-item">
@@ -140,6 +144,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="service-item">
                     <i class="fas fa-clipboard-check"></i>
+                   <div class="service-box" id="seo-audit">
                     <h3>SEO Audit</h3>
                 </div>
             </div>
@@ -148,6 +153,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <section id="case-studies" class="section-padding">
         <div class="container">
+           <section id="case-studies">
             <h2>Projects / Case Studies ??</h2>
             <div class="placeholder-content">
                 <p>????? ????? ??? ??? ?????? ?? ???????????? ??? ????? ???????????? Before/After ????????? ?????, Keyword Ranking Showcase, ??? Testimonials ?? ?????? ??????</p>
@@ -164,6 +170,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <section id="blog" class="section-padding accent-bg">
         <div class="container">
+           <section id="blog-insights">
             <h2>SEO Tips & Insights ??</h2>
             <div class="placeholder-content">
                 <p>?? ?????? ????? SEO ????, ??????????? ??? ???????????? ??????? ?? ???? ????????? ??? ?????</p>
@@ -286,6 +293,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
