--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="service-grid">
                 <div class="service-item">
                     <i class="fas fa-search"></i>
-                   <div class="service-box" id="on-page-optimization">
+                  <div class="service-item" id="on-page-optimization"> 
+                    <i class="fas fa-search"></i>
                     <h3>On-Page SEO</h3>
                 </div>
                 <div class="service-item">
@@ -120,17 +121,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="service-item">
                     <i class="fas fa-cogs"></i>
-                   <div class="service-box" id="technical-seo">
+                  <div class="service-item" id="technical-seo"> 
+                    <i class="fas fa-cogs"></i>
                     <h3>Technical SEO</h3>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-map-marker-alt"></i>
-                   <div class="service-box" id="local-seo">
+                   <div class="service-item" id="local-seo">
+                    <i class="fas fa-map-marker-alt"></i>
                     <h3>Local SEO / Geo Local SEO</h3>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-key"></i>
-                   <div class="service-box" id="keyword-research">
+                  <div class="service-item" id="keyword-research">
+                    <i class="fas fa-key"></i>
                     <h3>Keyword Research</h3>
                 </div>
                 <div class="service-item">
@@ -293,6 +297,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
