--- a/index.html
+++ b/index.html
@@ -105,55 +105,54 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </section>
 
     <section id="services" class="section-padding accent-bg">
-        <div class="container">
-           <section id="core-services">
+    <div class="container">
+        <section id="core-services">
             <h2>My Core SEO Services</h2>
             <div class="service-grid">
-                <div class="service-item">
-                    <i class="fas fa-search"></i>
-                  <div class="service-item" id="on-page-optimization"> 
+
+                <div class="service-item" id="on-page-optimization"> 
                     <i class="fas fa-search"></i>
                     <h3>On-Page SEO</h3>
                 </div>
+
                 <div class="service-item">
                     <i class="fas fa-link"></i>
                     <h3>Off-Page SEO (Link Building)</h3>
                 </div>
-                <div class="service-item">
-                    <i class="fas fa-cogs"></i>
-                  <div class="service-item" id="technical-seo"> 
+
+                <div class="service-item" id="technical-seo"> 
                     <i class="fas fa-cogs"></i>
                     <h3>Technical SEO</h3>
                 </div>
-                <div class="service-item">
-                    <i class="fas fa-map-marker-alt"></i>
-                   <div class="service-item" id="local-seo">
+
+                <div class="service-item" id="local-seo">
                     <i class="fas fa-map-marker-alt"></i>
                     <h3>Local SEO / Geo Local SEO</h3>
                 </div>
-                <div class="service-item">
-                    <i class="fas fa-key"></i>
-                  <div class="service-item" id="keyword-research">
+
+                <div class="service-item" id="keyword-research">
                     <i class="fas fa-key"></i>
                     <h3>Keyword Research</h3>
                 </div>
-                <div class="service-item">
+
+                <div class="service-item" id="content-optimization">
                     <i class="fas fa-chart-line"></i>
-                   <div class="service-box" id="content-optimization">
                     <h3>Content Optimization</h3>
                 </div>
+
                 <div class="service-item">
                     <i class="fas fa-chart-pie"></i>
                     <h3>Google Analytics / Search Console</h3>
                 </div>
-                <div class="service-item">
+
+                <div class="service-item" id="seo-audit">
                     <i class="fas fa-clipboard-check"></i>
-                   <div class="service-box" id="seo-audit">
                     <h3>SEO Audit</h3>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
+</section>
 
     <section id="case-studies" class="section-padding">
         <div class="container">
@@ -297,6 +296,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
