--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   "name": "Mahmodul Hasan - SEO & AEO Expert",
   "url": "https://mahmodulhasan9513-seo.github.io/seo-specialist-Bangladesh/",
   "slogan": "E-E-A-T Focused SEO Strategies for Sustainable Growth",
+      "telephone": "+8801618721289",
   "areaServed": [
     {"@type": "Country", "name": "Bangladesh"},
     {"@type": "City", "name": "Dhaka"}
@@ -311,6 +312,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
