--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <section id="case-studies" class="section-padding">
         <div class="container">
            <section id="case-studies">
-            <h2>Projects / Case Studies ??</h2>
+            <h2>Projects / Case Studies </h2>
             <div class="placeholder-content">
                 <section id="case-studies" style="padding: 60px 0; background-color: #1a1a1a;">
     <div class="container" style="max-width: 1100px; margin: 0 auto; padding: 0 15px;">
@@ -926,6 +926,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
