--- a/index.html
+++ b/index.html
@@ -962,9 +962,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </section>
 
     </div>
-                    <li>Before/After Traffic Graphs ?</li>
-                    <li>Keyword Ranking Showcase ?</li>
-                    <li>Testimonials Section (Client Reviews) ?</li>
+                    <li>Before/After Traffic Graphs </li>
+                    <li>Keyword Ranking Showcase </li>
+                    <li>Testimonials Section (Client Reviews)</li>
                 </ul>
             </div>
             <a href="#" class="secondary-btn">View My Success Stories</a>
@@ -1096,6 +1096,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
