--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
-      <link rel="icon" type="image/png" href="favicon.ico">
+      <link rel="icon" type="image/png" href="apple-touch-icon.png">
 
     
 </html>
@@ -1175,6 +1175,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 
 </html>
+
 
 
 
